# esg.linuxep.linux-mono-repo

./: .bazelproject  .gitignore  .user.bazelrc  CIJenkinsfile  README.md  build.sh  copy_output_to_build_input_location.sh  fixup_bazel_tools.sh  prepare_inputs.sh  release-package.xml  tap_build.sh  tap_fetch.sh  tap_test.sh  valgrind.sh
av/: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CIJenkinsfile  CMakeLists.txt  Jenkinsfile  README.md  TapJenkinsfile  build.sh  constants.bzl  substitutions.bzl  version_info.bzl
av/.github/: CODEOWNERS
av/LoggingAPI/: ConsoleLoggingSetup.h  FileLoggingSetup.cpp  LoggingSetup.cpp
av/PostInstall/: CMakeLists.txt
av/TA/: AVResources.robot  ComponentSetup.robot  PythonUnittest.py  README  RobotFramework.py  __init__.robot  cleanup.sh  conftest.py  move_robot_results.py  packageArmBuild.sh  packageArtifactoryBuild.sh  packageInput.sh  process_capnp_files.py  requirements.txt  test.py  waitForFile.sh
av/build-files/: common.sh  create_library_links.py  pathmgr.sh  release-package.xml
av/buildconfig/: CAPN.cmake  SophosAddLibrary.cmake  SophosAddTest.cmake
av/distribution/: CMakeLists.txt  fileInfo.py  generateSDDSImportAndManifestDat.py
av/installer/: CMakeLists.txt  plugin.json.in
av/localjenkins/: Jenkinsfile  cppcheck-Jenkinsfile  cppcheck-style-Jenkinsfile
av/modules/: CMakeLists.txt
av/pipeline/: pipeline.py
av/plugin/: EventBuilder.cpp  EventBuilder.h  FileSystem.cpp  Logger.cpp  Logger.h  PluginAdapter.cpp  PluginAdapter.h  PluginCallback.cpp  PluginCallback.h  QueueTask.cpp  QueueTask.h  ScanReport.cpp  ScannerSettings.cpp  StringReplace.cpp  StringReplace.h  Telemetry.cpp  main.cpp
av/products/: CMakeLists.txt
av/tests/: BUILD.bazel  CMakeLists.txt
av/tools/: CMakeLists.txt  changeNamespace.sh  setAWSTagsOnInstance.sh  soak_test_monitor.sh
base/: .clang-format  .gitignore  .gitmodules  .user.bazelrc  BUILD.bazel  CIJenkinsfile  CMakeLists.txt  Jenkinsfile  Jenkinsfile_telemetry_supplement  README.md  TapJenkinsfile  build-old.sh  build.sh  build2.sh  buildRunTestsAndProduceCoverageReport.sh  build_telemetry_supplement.sh  common_vars.sh  constants.bzl  copy_output_to_build_input_location.sh  cppcheck.cmake  debug.sh  fetchandbuild.sh  fixup_bazel_tools.sh  patch_boost.sh  patched_boost_executor.hpp  python_unit_test_requirements.txt  setLD_LIBRARY_PATH.sh  setup_build_tools.sh  setup_env_vars.sh  tap_fetch.sh  unpack_build_inputs.sh  version_info.bzl
base/.clwb/: .gitignore
base/PostInstall/: CMakeLists.txt  RunSdds3Builder.sh
base/aws-runner/: .gitignore  DeleteUnusedVolumes.py  Jenkinsfile  README.md  combineTemplateJson.py  create_html_report.py  delete_old_results.py  gather.sh  parallel_merge.py  postGather.sh  preGather.sh  reprocess.py  run_tests_in_aws.sh  scp.sh  sspl-system.template  test.sh  testAndSendResults.sh  waitForCompletionAndSync.py  waitForTestRunCompletion.py
base/buildconfig/: CAPN.cmake
base/localjenkins/: Jenkinsfile
base/modules/: CMakeLists.txt  common_substitutions.bzl  spl_independent_cc_tests.bzl
base/pipeline/: pipeline.py
base/products/: CMakeLists.txt
base/testUtils/: .gitignore  ChangeDevelopmentBranch.py  README.md  RobotFramework.py  copyOutputToTestMachine.sh  getArgs.py  print-tests.py  release-package.xml  replacePythonCoveragePaths.py  requirements.txt  system-product-test-base-coverage.xml  system-product-test-edr-coverage.xml  system-product-test-liveresponse-coverage.xml  system-product-test-mdr-coverage.xml  system-product-test-plugin-eventjournaler-coverage.xml  system-product-test-plugin-template-coverage.xml  system-product-test-release-package.xml  testUtilsMarker
base/tests/: BUILD.bazel  CMakeLists.txt  README.md  googletest  testtest.cpp
base/tools/: run-kcov-all.sh  (+2 more)
common/: AutoVersion.h.in  BUILD.bazel  bazel_stamp_vars.sh  common_substitutions.bzl  create_version_ini.py  expand_template_from_file.py  filter_files.bzl  generate_spv_template.py  shared_library_helper.bzl  spl_independent_cc_tests.bzl  spl_sdds_packages.bzl  strip.bzl  strip.py  system_library.bzl  test_versions_match.py  version_ini.bzl
deviceisolation/: .gitignore  BUILD.bazel  constants.bzl  substitutions.bzl  version_info.bzl
edr/: .clang-format  .gitignore  .gitmodules  BUILD.bazel  CIJenkinsfile  CMakeLists.txt  Jenkinsfile  README.md  TapJenkinsfile  build.sh  constants.bzl  cppcheck.cmake  fetchandbuild.sh  substitutions.bzl  version_info.bzl
eventjournaler/: .gitignore  .gitmodules  BUILD.bazel  CIJenkinsfile  CMakeLists.txt  Jenkinsfile  README.md  build.sh  constants.bzl  cppcheck.cmake  substitutions.bzl  version_info.bzl
liveterminal/: BUILD.bazel  CMakeLists.txt  README-Windows.md  README.2.md  README.md  constants.bzl  cppcheck.cmake  linux-release-package.xml  substitutions.bzl  version_info.bzl
products/: BUILD.bazel
response_actions/: BUILD.bazel  constants.bzl
thininstaller/: .gitignore  .gitmodules  BUILD.bazel  CIJenkinsfile  CMakeLists.txt  FileInfo.py  Jenkinsfile  README.md  SPLCompatibilityChecks.in.sh  buildLinux.sh  buildLinuxLocal.sh  buildcfg-linux.xml  common.sh  commonCompatibilityFunctions.in.sh  create.sh  create_thininstaller_asset.bzl  create_thininstaller_asset.py  credentials.txt  credentials_with_extra_lines.txt  credentials_with_windows_line_endings.txt  credentials_with_windows_line_endings_and_extra_lines.txt  eng_ps_rootca.crt  feature-build-cfg.xml  generateManifestDat.py  installer.cpp  installer_header.in.sh  installer_header.sh  jenkinsfile  pathmgr.sh  release-package.xml  sdds_https_rootca.crt  sha256OfFile.py  version_info.bzl
versig/: .gitattributes  .gitignore  .gitmodules  CIJenkinsfile  CMakeLists.txt  CertificateTracker.cpp  CertificateTracker.h  Jenkinsfile  Makefile.am  build.sh  common.sh  crypto_utils.cpp  crypto_utils.h  digest_body.cpp  digest_body.h  digest_body_checker.cpp  digest_buffer.h  digest_buffer_checker.cpp  iostr_utils.h  manifest_file.cpp  manifest_file.h  release-package.xml  signed_file.cpp  signed_file.h  verify_exceptions.cpp  verify_exceptions.h  versig.cpp
(+6422 files in other folders)
