# Copyright 2023-2024 Sophos Limited. All rights reserved.
load("//tools/config:expand_template.bzl", "expand_template")
load("//tools/config:sophos_asset.bzl", "soph_build_asset", "soph_release_asset")
load("//tools/config:soph_cc_rules.bzl", "soph_cc_library")
load("//tools/config:sophos_versioning.bzl", "version_info")

version_info(
    name = "version_info",
    base_version = "1.1.4",
    component_name = "sspl-plugin-anti-virus",
    visibility = ["//av:__subpackages__"],
)

expand_template(
    name = "AutoVersion_h",
    out = "AutoVersion.h",
    template = "//common:AutoVersion.h.in",
    version_info = ":version_info",
    version_info_substitutions = {"@VERSION@": "base_version"},
)

soph_cc_library(
    name = "AutoVersion",
    hdrs = [":AutoVersion_h"],
    include_prefix = "AutoVersioningHeaders",
    visibility = ["//av:__subpackages__"],
)

soph_release_asset(
    name = "installer",
    asset = "//av/products/distribution:installer_sdds2",
    asset_type = select({
        "//tools/config:linux_x64_rel": "release",
        "//tools/config:linux_x64_dbg": "build",
        "//tools/config:linux_arm64_rel": "release",
        "//tools/config:linux_arm64_dbg": "build",
    }),
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "installer_symbols",
    asset = "//av/products/distribution:installer_symbols",
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "tap_test_output",
    asset = "//av/tests:tap_test_output",
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "fuzz_test_assets",
    asset = "//av/tests:fuzz_test_assets",
    tags = ["manual"],
    visibility = ["//products:__pkg__"],
)
