# Copyright 2023 Sophos Limited. All rights reserved.
load("//tools/config:sophos_asset.bzl", "soph_build_asset", "soph_build_asset_pkg", "soph_release_asset")
load("//tools/config:expand_template.bzl", "expand_template")
load(":version_info.bzl", "BASE_BASE_VERSION")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools/config:soph_cc_rules.bzl", "soph_cc_library")

pkg_tar(
    name = "testUtils",
    srcs = glob(["testUtils/**"]),
    strip_prefix = "/base",
    visibility = ["//base/products/SystemProductTestOutput:__pkg__"],
)

expand_template(
    name = "AutoVersion_h",
    out = "AutoVersion.h",
    substitutions = {"@VERSION@": BASE_BASE_VERSION},
    template = "//common:AutoVersion.h.in",
    visibility = [
        "//base/modules:__subpackages__",
    ],
)

soph_cc_library(
    name = "AutoVersion",
    hdrs = [":AutoVersion_h"],
    include_prefix = "AutoVersioningHeaders",
    visibility = [
        "//base:__subpackages__",
    ],
)

soph_release_asset(
    name = "installer",
    asset = "//base/products/Base/installer:installer_sdds2",
    asset_type = select({
        "//tools/config:linux_x64_rel": "release",
        "//tools/config:linux_arm64_rel": "release",
        "//tools/config:linux_x64_dbg": "build",
        "//tools/config:linux_arm64_dbg": "build",
    }),
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "installer_symbols",
    asset = "//base/products/Base/installer:installer_symbols",
    visibility = ["//products:__pkg__"],
)

soph_build_asset_pkg(
    name = "fake_management",
    srcs = glob(
        [
            "testUtils/SupportFiles/FakeManagement/**",
        ],
    ) + ["testUtils/libs/ActionUtils.py"],
    platform_neutral = True,
    remap_paths = {
        "base/testUtils/SupportFiles/FakeManagement": "",
        "base/testUtils/libs": "",
    },
    strip_prefix = "/",
    visibility = ["//products:__pkg__"],
)

soph_build_asset_pkg(
    name = "system_test",
    srcs = ["//base/products/SystemProductTestOutput"],
    visibility = ["//products:__pkg__"],
)
