# Copyright 2023-2024 Sophos Limited. All rights reserved.
load("//tools/config:sophos_asset.bzl", "soph_build_asset", "soph_build_asset_pkg", "soph_release_asset")
load("//tools/config:expand_template.bzl", "expand_template")
load("//tools/config:sophos_versioning.bzl", "version_info")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools/config:soph_cc_rules.bzl", "soph_cc_library")

version_info(
    name = "version_info",
    base_version = "1.2.6",
    component_name = "sspl_base",
    visibility = ["//base:__subpackages__"],
)

expand_template(
    name = "AutoVersion_h",
    out = "AutoVersion.h",
    template = "//common:AutoVersion.h.in",
    version_info = ":version_info",
    version_info_substitutions = {"@VERSION@": "base_version"},
    visibility = [
        "//base/modules:__subpackages__",
    ],
)

soph_cc_library(
    name = "AutoVersion",
    hdrs = [":AutoVersion_h"],
    include_prefix = "AutoVersioningHeaders",
    visibility = [
        "//base:__subpackages__",
    ],
)

soph_release_asset(
    name = "installer",
    asset = "//base/products/Base/installer:installer_sdds2",
    asset_type = select({
        "//tools/config:linux_x64_rel": "release",
        "//tools/config:linux_arm64_rel": "release",
        "//tools/config:linux_x64_dbg": "build",
        "//tools/config:linux_arm64_dbg": "build",
    }),
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "installer_symbols",
    asset = "//base/products/Base/installer:installer_symbols",
    visibility = ["//products:__pkg__"],
)

soph_build_asset_pkg(
    name = "pluginapimessage_pb2_py",
    srcs = ["//base/modules/Common/PluginProtocol:PluginAPIMessage_py_pb2"],
    platform_neutral = True,
    visibility = ["//products:__pkg__"],
)

soph_build_asset_pkg(
    name = "distribution_scripts",
    srcs = ["//base/products/distribution:distribution_scripts"],
    platform_neutral = True,
    visibility = ["//products:__pkg__"],
)

soph_build_asset_pkg(
    name = "SystemProductTestOutput",
    srcs = [
        "testUtils/SupportFiles/CloudAutomation/SophosHTTPSClient.py",
        "testUtils/SupportFiles/CloudAutomation/cloudClient.py",
        "//base/products/SystemProductTestOutput/ZMQChecker:zmqchecker",
        "//base/tests/Common/HttpRequesterImpl:HttpRequesterLiveNetworkTests",
        "//base/tests/Common/HttpRequesterImpl:HttpTestServer.py",
        "//base/tests/Common/ZipUtilities:unzipTool",
        "//base/tests/Common/ZipUtilities:zipTool",
        "//base/tests/manualTools:FaultInjectionLogger",
        "//base/tests/manualTools:ignoreSignals",
        "//imports/thirdparty/openssl:openssl_binary",
    ],
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "fuzz_test_assets",
    asset = "//base/tests:fuzz_test_assets",
    tags = ["manual"],
    visibility = ["//products:__pkg__"],
)
